refactor: simplify frequency() return to unmodifiableList (review feedback)
Agent-Logs-Url: https://github.com/portuna85/kLo/sessions/a47e6d28-1dce-43db-8869-b6d797a96882

Co-authored-by: portuna85 <93257630+portuna85@users.noreply.github.com>